--- a/netlify.toml
+++ b/netlify.toml
@@ -2,11 +2,31 @@
   command = "npm run build"
   publish = "dist"
 
-[build.environment]
-  NODE_VERSION = "20"
+# Force HTTP → HTTPS on both hosts
+[[redirects]]
+  from = "http://messedupgame.com/*"
+  to = "https://messedupgame.com/:splat"
+  status = 301
+  force = true
 
+[[redirects]]
+  from = "http://www.messedupgame.com/*"
+  to = "https://messedupgame.com/:splat"
+  status = 301
+  force = true
+
+# SPA fallback (keep if the app is a single-page app)
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
+# Optional helpful headers
+[[headers]]
+  for = "/*"
+  [headers.values]
+  Cache-Control = "public, max-age=600"
+  X-Frame-Options = "DENY"
+  X-Content-Type-Options = "nosniff"
+  Referrer-Policy = "strict-origin-when-cross-origin"
 
