--- a/netlify.toml
+++ b/netlify.toml
@@ -2,10 +2,20 @@
   command = "npm run build"
   publish = "dist"
 
-# /join → StreamYard (must come before any catch-all if you add one later)
+[build.environment]
+  NODE_VERSION = "20"
+
+# Pretty /join link → StreamYard (keep specific routes BEFORE the catch-all)
 [[redirects]]
   from = "/join"
   to = "https://streamyard.com/yifxpdcaf9"
   status = 302
   force = true
+
+# Single Page App catch-all (MUST be last)
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
 
