--- a/netlify.toml
+++ b/netlify.toml
@@ -5,12 +5,14 @@
 [build.environment]
   NODE_VERSION = "20"
 
+# Optional: pretty /join link
 [[redirects]]
   from = "/join"
   to = "https://streamyard.com/yifxpdcaf9"
   status = 302
   force = true
 
+# SPA catch-all (MUST be last)
 [[redirects]]
   from = "/*"
   to = "/index.html"
