--- a/package.json
+++ b/package.json
@@ -1,21 +1,10 @@
-{
-  "name": "messed-up-game",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.3",
-    "vite": "^5.4.0"
-  }
-}
+# show the workspace root VS Code opened
+pwd
+
+# list what's here
+ls -la
+
+# search a few levels deep for package.json (ignores node_modules)
+find . -maxdepth 4 -name package.json -not -path "*/node_modules/*"
 
 
