--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,16 @@
 [build.environment]
   NODE_VERSION = "20"
 
+# 1) Let Let's Encrypt ACME files pass through (prevents 404 on /.well-known/*)
+[[redirects]]
+  from = "/.well-known/*"
+  to = "/.well-known/:splat"
+  status = 200
+  force = true
+
+# 2) SPA fallback (keep this BELOW the .well-known rule)
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
