Add redirects for Let's Encrypt ACME files
Added redirects for Let's Encrypt ACME files to prevent 404 errors.

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,14 @@
 [build.environment]
   NODE_VERSION = "20"
 
+# Let Let's Encrypt ACME files pass through (prevents 404 on /.well-known/*)
+[[redirects]]
+  from = "/.well-known/*"
+  to = "/.well-known/:splat"
+  status = 200
+  force = true
+
+# SPA fallback (keep this BELOW the .well-known rule)
 [[redirects]]
   from = "/*"
   to = "/index.html"
