Add redirect for ACME challenge verification

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,13 @@
   NODE_VERSION = "20"
 
 [[redirects]]
+  from = "/.well-known/acme-challenge/*"
+  to = "/acme/:splat"
+  status = 200
+  force = true
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
