Add redirects for well-known paths and SPA
Added redirects for Let's Encrypt and SPA catch-all.

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,15 @@
 [build.environment]
   NODE_VERSION = "20"
 
+# Allow Let's Encrypt and other well-known paths to pass through
+[[redirects]]
+  from = "/.well-known/*"
+  to = "/.well-known/:splat"
+  status = 200
+
+# SPA catch-all
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
