--- a/netlify.toml
+++ b/netlify.toml
@@ -5,15 +5,16 @@
 [build.environment]
   NODE_VERSION = "20"
 
-# Allow Let's Encrypt and other well-known paths to pass through
+# Keep this allow rule
 [[redirects]]
   from = "/.well-known/*"
-  to = "/.well-known/:splat"
+  to   = "/.well-known/:splat"
   status = 200
 
-# SPA catch-all
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+# TEMPORARILY DISABLE the SPA catch-all for this deploy:
+# [[redirects]]
+#   from = "/*"
+#   to   = "/index.html"
+#   status = 200
+
 
